# stealth-lightbeacon-desktop-tauri

./: .gitignore  AGENTS.md  LICENSE  README.md  architecture.md  backlog.md  bill-of-materials.md  changelog.md  codemap.md  contributing.md  desktop-backend-contract.md  eslint.config.js  implementation-roadmap.md  index.html  integration_log.jsonl  package-lock.json  package.json  plan-review-traceability.md  playwright.config.ts  pnpm-lock.yaml  readme-CLI.md  security-policy.md  shared-axioms.md  tech-stack.md  vite.config.ts  vitest.config.ts
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: release.yml  test-smoke.yml
.slim/: codemap.json
contracts/: backend-api.openapi.json
docs/: SEO Pro Max Skill vs Google & GEO Guidance.md  changelog.md  project-rules.md
docs/roadmap/: README.md  backlog.md  implementation-queue.md  implementation-roadmap.md  merge-checkpoints.md  overseer-adversarial-app-gap-report.md  plan-review-traceability.md  playwright-test-suite.md  r6-adversarial-ux-tdd-plan.md  tab-shell-navigation-and-report-downloads.md  test-hardening-remediation-plan.md  (+1 more)
engine/: mock_audit_engine.py
scripts/: browser_smoke.mjs  check_contract_sync.py  release_validate.py  validate_shell.mjs
src/: App.css  App.tsx  App.types.ts  codemap.md  index.css
src-tauri/: Cargo.toml  codemap.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codemap.md  lib.rs
src-tauri/src/commands/: codemap.md  mod.rs
src-tauri/src/domain/: codemap.md  mod.rs  snapshot.rs
(+52 files in other folders)
