[package]
name = "stealth-lightbeacon-desktop-tauri"
version = "0.1.1"
description = "OpenAPI-first Tauri desktop client for the Stealth Lightbeacon backend API"
authors = ["OpenAI Codex"]
edition = "2021"
default-run = "stealth-lightbeacon-desktop-tauri"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
